fix cards on mobile, add forager proj, change pic

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .webdev {
-  background-image: url("./images/img-6.jpg");
+  background-image: url("./images/universe.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
