--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -117,3 +117,9 @@ h1 {
     margin-bottom: 2rem;
   }
 }
+
+@media screen and (max-width: 540px) {
+  .cards {
+    padding: 1rem;
+  }
+}
